--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     
 </head>
 <body>
+   
     <main>
         <h2>Hello. Welcome to White Rock Mining</h2>
     </main>
+    <footer>
+        <div class="container">
+        </div>
+    </footer>    
 </body>
 </html>
