index: header > nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     
 </head>
 <body>
-   
+    <header>
+        <nav>
+            <a href="">home</a>
+        </nav>
+    </header>
     <main>
         <h2>Hello. Welcome to White Rock Mining</h2>
     </main>
