index: page heaading class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main class="container">
-        <h2>Hello. Welcome to White Rock Mining</h2>
+        <h2 class="page-heading">Hello. Welcome to White Rock Mining</h2>
     </main>
     <footer>
         <div class="container">
