--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Rock Mining - Home</title>
+    <title>Home - White Rock Mining</title>
 
      <!-- Boot Starp CSS CDN -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main class="container">
-        <h2 class="page-heading">Hello. Welcome to White Rock Mining</h2>
+        <h2 class="page-heading text-center p-3">Hello. Welcome to White Rock Mining</h2>
     </main>
     <footer>
         <div class="container">
