index-welcome style

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </header>
     <main class="container">
         <section>
-            <h2 class="page-heading text-center p-3">Hello. Welcome to White Rock Mining</h2>
+            <h2 class="page-heading text-center p-3" id="index-welcome">Hello. Welcome to White Rock Mining</h2>
         </section>
         <section>
             <div class="full-screen" id="">
-
+                
             </div>
         </section>
         
