--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 </head>
 <body>
     <header>
-        <nav class="container">
+        <!-- <nav class="container">
             
             <a href="">home</a>
-        </nav>
+        </nav> -->
     </header>
-    <main class="container">
-        <section>
-            <h2 class="page-heading text-center p-3" id="index-welcome">Hello. Welcome to White Rock Mining</h2>
+    <main>
+        <section id="index-welcome">
+            <h2 class="page-heading text-center p-3 container" >Hello! Welcome to White Rock Mining</h2>
         </section>
         <section>
             <div class="full-screen" id="">
